# TK_LK

./: .env  .env.example  .env.production  Dockerfile  Makefile  Requirements.txt  autograph_response_sample.json  build.sh  checklist.md  db.sqlite3  docker-compose.yml  pyproject.toml  railway.json  render.yaml  test_api.py  test_api_django.py  test_api_enhanced.py  test_autograph.py
api/: clients.py
app/api/: clients.py
billing/: apps.py
config/: celery.py  settings.py  urls.py
dashboard/: api_views.py  apps.py  services.py  urls.py  views.py  views_react.py
dashboard/migrations/: 0001_initial.py
nginx/: nginx.conf
prometheus/: prometheus.yml
reports/: api_views.py  urls.py  views.py
scripts/: init_db.sh  start.sh
support/: apps.py
templates/: base.html  react_app.html
templates/auth/: login.html
templates/billing/: billing.html
templates/dashboard/: dashboard.html  debug_fuel_parsing.html  debug_online.html  debug_raw_data.html  test_apis.html  test_enhanced.html  test_final.html  test_final_fuel.html  test_final_with_fuel.html  test_fuel.html  test_online_apis.html  (+1 more)
users/: admin.py  api_client.py  backend.py  backends.py  decorators.py  models.py  tests.py  urls.py  urls_api.py  urls_web.py  utils.py  views.py  views_api.py  views_web.py
vehicles/: api_urls.py  api_views.py  api_views_enhanced.py  apps.py  dashboard_service.py  data_collector.py  html_urls.py  models.py  parameter_groups.py  parameter_utils.py  service_importer.py  services.py  services_enhanced.py  tasks.py  test_dashboard.py  urls.py  views.py  views_enhanced.py
(+23 files in other folders)
