[project]
name = "lk-tehnokom"
version = "0.1.0"
description = "Django project for TK LK"
authors = [
    {name = "Anton Osipenko",email = "ekt.promo.osipenko.a@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref (==3.10.0)",
    "certifi (==2025.10.5)",
    "charset-normalizer (==3.4.4)",
    "dj-config-url (==0.1.1)",
    "dj-database-url (==2.1.0)",
    "django (==5.2.7)",
    "django-cors-headers (==4.9.0)",
    "django-filter (==25.2)",
    "django-redis (==6.0.0)",
    "djangorestframework (==3.16.1)",
    "drf-yasg (==1.21.11)",
    "idna (==3.11)",
    "inflection (==0.5.1)",
    "packaging (==25.0)",
    "python-dotenv (==1.2.1)",
    "pytz (==2025.2)",
    "pyyaml (==6.0.3)",
    "redis (==7.0.1)",
    "requests (==2.32.5)",
    "sqlparse (==0.5.3)",
    "typing-extensions (==4.15.0)",
    "tzdata (==2025.2)",
    "uritemplate (==4.2.0)",
    "urllib3 (==2.5.0)",
    "whitenoise (==6.6.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
